# api_movilidad

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  vercel.json
.claude/skills/fastapi-hexagonal/: SKILL.md
.claude/skills/fastapi-hexagonal/references/: infraestructura-produccion.md  patrones-dominio.md  seguridad-avanzada.md
.claude/skills/gitflow/: SKILL.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_schema_completo.py  002_movilidad_parqueadero_nunc.py  003_estado_devuelto_y_transiciones.py  004_modulo_inventarios.py
api/: index.py
docker/: Dockerfile  docker-compose.yml
scripts/: crear_superadmin.py
src/app/: config.py  dependencies.py  main.py
src/app/api/: error_handlers.py
src/app/api/v1/middlewares/: auditoria.py  body_limit.py  idempotency.py  lowercase_path.py  rate_limiter.py  security.py  tenant.py
src/app/api/v1/schemas/: paginacion.py
src/app/application/use_cases/movilidad/: cambiar_estado_radicacion.py  cambiar_estado_traslado.py  crear_cuenta.py  crear_novedad.py  (+3 more)
src/app/domain/: exceptions.py
src/app/infrastructure/: identity.py  observability.py
src/app/infrastructure/cache/: redis_service.py
src/app/infrastructure/messaging/: smtp_email_service.py
src/app/infrastructure/persistence/: database.py
src/app/templates/movilidad/: remision_traslado.html
tests/: conftest.py
tests/integration/: conftest.py  conftest_integration.py  test_flujo_autenticacion.py  test_migraciones.py  test_repositorios.py
tests/unit/: test_api_keys.py  test_autenticar_usuario.py  test_cache_invalidation.py  test_crear_usuario.py  test_endpoints_http.py  test_error_handlers.py  test_jwt_service.py  test_movilidad.py  test_movilidad_use_cases.py  test_permisos_usuario.py  test_roles.py  test_seguridad.py  test_tenant_isolation.py  test_token_service.py
(+132 files in other folders)
